[package]
name = "strecken-info"
version = "2.0.0"
edition = "2021"
authors = ["AdriDoesThings <contact@adridoesthings.com>"]
description = "Rust SDK to make requests to"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["deutschebahn"]
repository = "https://github.com/AdriDevelopsThings/strecken-info-rs"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
chrono = { version = "0", features = ["serde"] }
futures-util = "0"
reqwest = { version = "0", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net"] }
tokio-tungstenite = "0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
